--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+### Mac OS X clutter ###
+*.DS_Store
+
+### Windows clutter ###
+Thumbs.db
+
 # Package Files #
 *.jar
 *.war
@@ -10,3 +16,98 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### Eclipse ###
+.classpath
+.projects
+.project
+.settings/*.*
+.settings/**
+/bin
+/bin/**/*.*
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
+
+*.iml
+
+### NetBeans ###
+private/
+
+## Directory-based project format:
+#.idea/
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+.idea/artifacts/
+.idea/dataSources.local.xml
+.idea/dbnavigator.xml
+.idea/sqldialects.xml
+.nb-gradle/
+.idea/misc.xml
+.idea/codeStyleSettings.xml
+.idea/misc.xml
+.idea/flexCompiler.xml
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+## Plugin-specific files:
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+
+### Gradle ###
+.gradle
+build/
+.build.gradle.swp
+# Ignore Gradle GUI config
+gradle-app.setting
+
+### Others, app-specific ###
+data_transfer/
+data_transfer.bak
+nohup.out
+sync.log
+
+# Reports
+src/main/resources/reports/*.pdf
+
+# log files
+*.log
+psql_cmd.tmp
+
+#tmp
+.*_tmp
+*_tmp
+/private/
+/skripsicall/target/
+/logs/
+Compressed file.7z
+idea.zip
+patch
+src/main/webapp/uploads
