--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group 'joker'
 version '1.0'
 
+apply plugin: 'flyway'
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'jetty'
@@ -11,6 +12,23 @@ configurations{
 }
 
 sourceCompatibility = 1.8
+
+/**
+ * Buildscript configuration
+ *
+ * Contains dependencies that are put on the classpath of your build and that you can refer to
+ * from your build file.
+ */
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.postgresql:postgresql:9.3-1102-jdbc41'
+        classpath 'org.flywaydb:flyway-gradle-plugin:3.1'
+    }
+}
 
 repositories {
     mavenCentral()
@@ -30,6 +48,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.4.3'
 
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile group: 'joda-time', name: 'joda-time', version: '2.5'
 
     compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
 
@@ -69,6 +88,15 @@ dependencies {
 
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.0.1'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
+}
+
+/**
+ * Flyway configuration
+ */
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/skripsicall'
+    user = 'skripsicall'
+    password = 'skripsicall'
 }
 
 jettyRun {
