--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,10 @@
 
     <servlet>
         <servlet-name>jers</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:/context.xml</param-value>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>com.jmat.skripsicall</param-value>
         </init-param>
         <load-on-startup>2</load-on-startup>
     </servlet>
